app/deployments/tweetor-deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweetor
  namespace: staging
spec:
  selector:
    matchLabels:
      app: tweetor
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata: 
      labels:
        app: tweetor
      annotations:
        checksum/deployment: TMP_DEP_CHECKSUM
    spec:
      containers:
      - name: tweetor
        image: bxcodec/tweetor:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 9090
        readinessProbe:
          httpGet:
            path: /ping
            port: 9090
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /ping
            port: 9090
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 400M
          requests:
            cpu: 50m
            memory: 200M
        volumeMounts:
        - name: configs
          mountPath: /tweetor
      volumes:
      - name: configs
        configMap:
          name: vol-config-tweetor
---
kind: Service
apiVersion: v1
metadata:
  name: tweetor
  namespace: staging
spec:
  type: NodePort
  selector:
    app: tweetor
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
      name: tweetor
